# scipion-em-opusdsd

./: CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_and_tag.yml
opusdsd/: __init__.py  bibtex.py  constants.py  objects.py  protocols.conf  utils.py  viewers.py
opusdsd/protocols/: __init__.py  protocol_analyze.py  protocol_base.py  protocol_preprocess.py  protocol_train.py  protocol_training.py
opusdsd/tests/: __init__.py  test_opusdsd.py  test_protocols_opusdsd.py
