[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-opusdsd"
dynamic = ["version", "dependencies"]

authors = [
    {name = "James Krieger", email = "jamesmkrieger@gmail.com"},
    {name = "Eduardo García", email= "edugarde01@gmail.com"}
]
description = "Plugin to use Opusdsd programs within the Scipion framework"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["scipion", "electron-microscopy", "cryo-em", "structural-biology", "image-processing", "scipion-3.0", "opusdsd"]
license = {text = "GNU General Public License v3 (GPLv3)"}

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-opusdsd"
Repository = "https://github.com/scipion-em/scipion-em-opusdsd"
Issues = "https://github.com/scipion-em/scipion-em-opusdsd/issues"

[tool.setuptools.package-data]
"opusdsd" = ["protocols.conf", "cryodrgn_logo.png"]

[project.entry-points."pyworkflow.plugin"]
opusdsd = "opusdsd"

[tool.setuptools.dynamic]
version = {attr = "opusdsd.__version__"}
dependencies = {file = ["requirements.txt"]}
